--- a/src/components/renderer/index.css
+++ b/src/components/renderer/index.css
@@ -40,7 +40,7 @@
   overflow: auto;
   display: flex;
   align-items: center;
-  z-index: 10000;
+  z-index: 15;
 }
 
 .fullscreen-chart > div {
